# pycanon

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.rst  check_adult_anonymity.py  check_airline_data_anonymity.py  check_airline_data_anonymity_gen.py  check_drug_data_anonymity.py  check_math_scores_anonymity.py  check_stroke_data_anonymity.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_anonymity.py  test_anonymity_gen.py  test_pdf_math.py  tox.ini
.github/: dependabot.yml
.github/workflows/: .codecov.yml  cicd.yml  pypi.yml  release-please.yml
Data/: adult_anonymized_10.csv  adult_anonymized_10_l2.csv  adult_anonymized_20_l2.csv  adult_anonymized_3_l2.csv  drugs_k5.csv  drugs_k5_anonymized_l3.csv  hospital_anonymized.csv  process_data.py
Data/Processed/: StudentsMath_Score.csv  StudentsMath_Score_k2.csv  StudentsMath_Score_k5.csv  adult_anonymized_10.csv  adult_anonymized_20.csv  adult_anonymized_3.csv  airline_passenger_sat.csv  airline_passenger_sat_k2.csv  drug_type.csv  drugs_k5.csv  healthcare-dataset-stroke-data.csv  stroke_k10.csv  stroke_k15.csv  stroke_k19.csv  stroke_k2.csv  stroke_k20.csv  stroke_k25.csv  stroke_k5.csv
Data/Raw/: StudentsMath_Score.sav  StudentsMath_Score_k5.csv  StudentsMath_Score_k7.csv  adult_anonymized_20.csv  airline_passenger_sat_k5.csv  sav_to_csv.py  stroke_k15.csv  stroke_k19.csv  stroke_k2.csv  stroke_k20.csv  stroke_k22.csv  stroke_k25.csv  stroke_k5.csv
Data/l_diversity/: StudentsMath_Score_k2_anonymized_l3.csv  StudentsMath_Score_k5_anonymized_l5.csv  StudentsMath_Score_l3.csv  adult_anonymized_10_l2.csv  adult_anonymized_20_l2.csv  adult_k3_anonymized_l2.csv  airline_passenger_sat_k10_anonymized_l2.csv  airline_passenger_sat_k2_anonymized_l2.csv  airline_passenger_sat_k5_anonymized_l2.csv  drugs_k5_anonymized_l3.csv  healthcare-dataset-stroke-data_l2.csv  stroke_k10_anonymized_l2.csv  stroke_k15_anonymized_l2.csv  stroke_k19_anonymized_l2.csv  stroke_k20_anonymized_l2.csv  stroke_k25_anonymized_l2.csv  stroke_k2_anonymized_l2.csv  stroke_k5_anonymized_l2.csv
Examples/: check_adult_anonymity.py  check_airline_data_anonymity_gen.py  check_airline_data_anonymity_updateqi.py  check_drug_data_anonymity.py  check_math_scores_anonymity.py  check_report_math.py  check_stroke_data_anonymity.py  test_pdf_math.py  test_report_math.py
check-anonymity/: __init__.py  check_drug_data_anonymity.py  check_stroke_data_anonymity.py
check_anonymity/: __init__.py  check_adult_anonymity.py  check_airline_data_anonymity_gen.py  check_math_scores_anonymity.py  test_anonymity.py
data/: process_data.py
data/l_diversity/: StudentsMath_Score_k7_anonymized_l7.csv  airline_passenger_sat_k20_anonymized_l2.csv  stroke_k20_anonymized_l2.csv  stroke_k2_anonymized_l2.csv
data/processed/: StudentsMath_Score_k7.csv  airline_passenger_sat_k10.csv  airline_passenger_sat_k20.csv  airline_passenger_sat_k5.csv  stroke_k10.csv
data/raw/: StudentsMath_Score.csv  StudentsMath_Score_k2.csv  adult.csv  adult_anonymized_10.csv  adult_anonymized_3.csv  airline_passenger_sat_k10.csv  airline_passenger_sat_k2.csv  airline_passenger_sat_k20.csv  sav_to_csv.py  stroke_k10.csv
doc/: requirements.txt
doc/source/: conf.py  index.rst  intro.rst  modules.rst  notes_utility.rst  notes_warnings.rst  pycanon.anonymity.rst  pycanon.anonymity.utils.rst  pycanon.metrics.rst  pycanon.report.rst  pycanon.rst
examples/: check_adult_anonymity.py  check_airline_data_anonymity_gen.py  check_airline_data_anonymity_updateqi.py  check_drug_data_anonymity.py  check_math_scores_anonymity.py  check_report_math.py  check_stroke_data_anonymity.py  check_utility_report_math.py
pycanon/: __init__.py  anonimity.py  anonymity.py  aux_functions.py  cli.py  report.py  test_anonymity.py
pycanon/anonymity/: __init__.py  _beta_likeness.py  _delta_disclosure.py  _k_anonymity.py  _l_diversity.py  _t_closeness.py  anonymity.py  check_anonymity.py
pycanon/anonymity/utils/: __init__.py  aux_anonymity.py  aux_functions.py
pycanon/metrics/: __init__.py  _attribute_statistics.py  _disclosure_metrics.py  _reidentification_metrics copy.py  _reidentification_metrics.py  _utility_metrics.py
pycanon/report/: __init__.py  base.py  json.py  pdf.py  pdf_utility_report.py
pycanon/utility/: __init__.py  _attribute_statistics.py  _reidentification_metrics.py  _utility_metrics.py  attribute_statistics.py  utility_metrics.py
source/: conf.py  index.rst  pycanon.report.rst  pycanon.rst
src/: __init__.py  test_anonymity.py  test_anonymity_gen.py
src/pycanon/anonymity/: _beta_likeness.py  _k_anonymity.py  _t_closeness.py
src/pycanon/anonymity/utils/: aux_anonymity.py  aux_functions.py
src/pycanon/report/: pdf.py
src/pycanon/utility/: __init__.py
tests/: __init__.py  test_anonymity.py  test_json.py  test_metrics.py  test_reports.py
