[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[project]
name = "pycanon"
dynamic = ["version"]
description = "pyCANON, A Python library to check the level of anonymity of a dataset"
readme = "README.rst"
license = "Apache License 2.0"
authors = [
    { name = "Judith Sáinz-Pardo Díaz", email = "sainzpardo@ifca.unican.es" },
    { name = "Álvaro López García (IFCA (CSIC-UC))", email = "aloga@ifca.unican.es" },
]
keywords = [
    "anonymity",
    "data",
    "privacy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "tabulate>=0.8.10",
    "typer>=0.4.1",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=3.6.9,<4.0.0",
]

[project.scripts]
pycanon = "pycanon.cli:app"

[project.urls]
Homepage = "https://gitlab.ifca.es/privacy-security/pycanon"
