[tool.poetry]
name = "pycanon"
version = "1.0.3"
description = "pyCANON: A Python library to check the level of anonymity of a dataset."
authors = [
    "Judith Sáinz-Pardo Díaz <sainzpardo@ifca.unican.es>",
    "Álvaro López García <aloga@ifca.unican.es>"
]
maintainers = ["Judith Sáinz-Pardo Díaz <sainzpardo@ifca.unican.es>"]
license = "Apache License 2.0"
readme = "README.rst"
repository = "https://github.com/IFCA-Advanced-Computing/pycanon"
keywords = ["data", "privacy", "anonymity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3 ",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security"
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "2.0.2"
pandas = "2.2.2"
typing_extensions = "4.12.2"
beartype = "0.19.0"
docutils = "0.21.2"
reportlab = "4.2.5"
typer = "0.15.1"
tabulate = "0.8.10"


[tool.poetry.group.dev.dependencies]
tox = "4.16.0"


[tool.poetry.group.test.dependencies]
pytest = ">=7.1.2,<9.0.0"
pytest-cov = ">=4,<7"


[tool.poetry.group.test-flake8.dependencies]
flake8 = ">=4,<8"
flake8-bugbear = ">=22.3,<25.0"
flake8-docstrings = "^1.6"
flake8-typing-imports = "^1.12"
flake8-colors = "^0.1"
pep8-naming = ">=0.12,<0.15"
pydocstyle = "^6.1"


[tool.poetry.group.test-black.dependencies]
black = ">=22.3,<25.0"


[tool.poetry.group.test-bandit.dependencies]
bandit = "^1.7.5"


[tool.poetry.group.test-pip-missing-reqs.dependencies]
pip-check-reqs = "^2.5.3"


[tool.poetry.group.test-mypy.dependencies]
mypy = "1.14.1"


[tool.poetry.group.test-pypi.dependencies]
twine = ">=4.0.2,<7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
