[metadata]
name = pycanon
version = attr: pycanon.__version__
keywords = data, privacy, anonymity

author = 'Judith sáinz-Pardo Díaz'
author_email = 'sainzpardo@ifca.unican.es'
url = 'https://gitlab.ifca.es/privacy-security/pycanon'

description = 'Check anonymization techniques.'
long_description = file: README.md
long_description_content_type = "text/markdown"

license = 'Apache License 2.0'
license_files = LICENSE

classifiers = 
    Development Status :: 5 – Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Security

[options]
zip_safe = False
package_dir = pycanon
packages = find:

[options.packages.find]
where = pycanon

# Passing requirements as file only works on setuptools >= 62.6
#install_requires = file: requirements.txt

[entry_points]
console_scripts =
    pycanon = pycanon.cli:app

[build_sphinx]
source_dir = doc/source
build_dir = doc/build
all_files = 1
