[metadata]
name = pycanon
version = attr: pycanon.__version__
keywords = data, privacy, anonymity

author = Judith Sáinz-Pardo Díaz, Álvaro López García (IFCA (CSIC-UC))
author_email = sainzpardo@ifca.unican.es, aloga@ifca.unican.es
url = https://gitlab.ifca.es/privacy-security/pycanon

description = pyCANON, A Python library to check the level of anonymity of a dataset
long_description = file: README.rst

license = Apache License 2.0
license_files = LICENSE

classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Security

[options]
packages = 
    pycanon
    pycanon.anonymity
    pycanon.anonymity.utils
    pycanon.report

# Passing requirements as file only works on setuptools >= 62.6
#install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    pycanon = pycanon.cli:app

[options.extras_require]
PDF =
    reportlab>=3.6.9,<4.0.0

[build_sphinx]
source_dir = doc/source
build_dir = doc/build
all_files = 1
